--- a/coffee/choose.html
+++ b/coffee/choose.html
@@ -1,21 +1,38 @@
 {% extends "layout.html" %}
-{% block title %} {{ jamla['company']['name'] }} {% endblock %}
+{% block title %} Pricing | {{ jamla['company']['name'] }} {% endblock %}
 
 {% block body %}
 
+<div class="background-white">
 <div class="flex flex-center">
-    <section class="lead-homepage">
-        <h1>{{ jamla['company']['name'] }}</h1>
-        <h2>Delivered monthly</h2>
-        <p> {{ jamla['company']['slogan'] }} </p>
-    </section>
+  <h1>Packages<h1>
 </div>
 
-<div class="flex flex-center">
-    <a class="btn" href="/start-building" 
-        role="button">Subscribe Now</a> 
-    <a class="btn btn-secondary" href="/" 
-        role="button" >Learn more</a>
+<div class="flex flex-center flex-wrap">
+    
+    <div class="plan">
+    {% for item in jamla['items'] %}
+        <h2>{{ item['title']|safe }}</h2>
+
+        &pound;{{ "%.2f"|format(item['monthly_price']/100) }} a month
+        {% if item['sell_price'] %}
+          Upfont cost: &pound;{{ "%.2f"|format(item['sell_price']/100) }}
+        {% else %}
+          Upfont cost: &pound;0.00
+        {% endif %}
+        <ul>
+            {% for sellingPoint in item['selling_points'] %}
+                <li>{{ sellingPoint|safe }}</li>
+            {% endfor %}
+        </ul>
+        <div class="flex flex-center">
+            <a href="/new_customer?plan={{ item['sku'] }}" class="btn">
+            Choose
+            </a>
+        </div>
+        {% endfor %}
+    </div>
 </div>
+<div>
 
 {% endblock %}
